@@ -143,6 +143,9 @@
         <configuration>
           <source>8</source>
           <target>8</target>
+          <compilerArgs>
+            <arg>-proc:full</arg>
+          </compilerArgs>
         </configuration>
       </plugin>
       <plugin>
